--- a/css/index.css
+++ b/css/index.css
@@ -213,7 +213,7 @@ h1 {
 }
 
 #drag-drop {
-  padding: 15px 0 5px 0;
+  padding: 15px 0 0 0;
   font-size: 18px;
   font-weight: 500;
 }
@@ -231,10 +231,52 @@ h1 {
   border-style: dashed;
 }
 
+#drop-area .form-container div:first-child {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 1;
+  visibility: visible;
+  transition-duration: 0.2s;
+  transform: scale(1);
+}
+
+#drop-area .form-container div:last-child {
+  font-size: 100px;
+  font-weight: 700;
+  color: var(--accent-400);
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  pointer-events: none;
+  opacity: 0;
+  visibility: hidden;
+  transform: scale(0.6);
+  transition-duration: 0.2s;
+}
+
+#or {
+  margin: 6px 0 20px 0;
+}
+
 label span {
-  color: var(--accent-700);
-  text-decoration: underline;
+  padding: 10px 20px;
+  background-color: var(--accent-600);
+  color: #fff;
   cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  font-weight: 500;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+  rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+label span:hover {
+  background-color: var(--accent-700);
+  transition: all 0.2s ease-in-out;
 }
 
 .hidden-input {
@@ -245,7 +287,7 @@ label span {
 }
 
 #max-file-size {
-  padding-top: 8px;
+  padding-top: 12px;
   font-size: 10px;
 }
 
@@ -309,6 +351,15 @@ label span {
 /* Thin scrollbar track */
 ::-webkit-scrollbar-track {
   background: #f1f1f1; /* Set the color of the scrollbar track */
+}
+
+#download {
+  display: flex;
+  justify-content: center;
+  background-color: transparent;
+  padding: 0 3px;
+  border: none;
+  cursor: pointer;
 }
 
 .submit button {
